fixes mobile overflow ?

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -80,7 +80,7 @@ h1 {
   	height: 100vh;
 	}
   to {
-  	top: 100%;
+  	top: 100vh;
   	height: 0vh;
   }
 }
